--- a/css/styles/styles.scss
+++ b/css/styles/styles.scss
@@ -153,8 +153,9 @@ body {
                 font-size: 1.5em;
                 padding: 1px 30px;
                 border-radius: 20px;
-                left: 39%;
-                margin-top: -34px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -107%);
                 -webkit-box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.4); 
                 box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.4);
             }
