--- a/css/styles/styles.scss
+++ b/css/styles/styles.scss
@@ -10,6 +10,7 @@ body {
     &__search {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap-reverse;
         max-width: 1050px;
         margin: 20px auto 0px auto;
         padding-left:2%;
@@ -17,6 +18,7 @@ body {
         &__dropdowns {
             align-items: center;
             justify-content: center;
+            padding-top:15px;
             span {
                 -webkit-transition: .5s;
                 transition: .5s;
@@ -43,14 +45,16 @@ body {
             }
         }
         &__search-field {
+            padding-top:15px;
             align-items: center;
             justify-content: center;
+            max-width:400px;
             input {
                 outline: none;
                 font-size:12px;
                 padding:2px;
                 padding-left:0px;
-                min-width:200px;
+                width: 100%;
                 border-bottom:2px solid $med-gray;
                 border-top:none;
                 border-left:none;
